--- a/force-app/main/default/classes/ControllerProprietorRequireReview.cls
+++ b/force-app/main/default/classes/ControllerProprietorRequireReview.cls
@@ -19,9 +19,32 @@ global without sharing class ControllerProprietorRequireReview {
     }
     @AuraEnabled(cacheable=false)
     global static String toCreateApprove(Id recordId) {
-        Requirementsreview__c req = [SELECT Id,Process_Id__c,Approval_Comments__c,Applicant_Num__c,Owner_Department__c,Applicationsector__c,Marketing_Center__r.Job_Number__c,Regional_Agency__r.Job_Number__c,Business_Manager__r.Job_Number__c,Presidential_System_Room__r.Job_Number__c,Approvalstatus__c,
+        Requirementsreview__c req = [SELECT Id,Process_Id__c,Approval_Comments__c,Applicant_Num__c,Owner_Department__c,Applicationsector__c,Marketing_Center__r.Job_Number__c,
+        Regional_Agency__r.Job_Number__c,Business_Manager__r.Job_Number__c,Presidential_System_Room__r.Job_Number__c,Approvalstatus__c,
                                     (SELECT Id,Originalcontractbrand__c,Recommendedbrand__c,Configurationname__c FROM Requirementsreview__r),
-                                    Projectcategory__c,Country__c,Group__r.Name,Contractmodel__c,Projectname__c,Contractwarrantyperiod__c,Configurationcategory__c,Deliveryrequirements__c,toLabel(Opportunityname__r.ProjectArea__c),ProjectType__c,toLabel(Opportunityname__r.MarketBidDept__c),FinishDate__c FROM Requirementsreview__c WHERE id =: recordId];
+                                    Projectcategory__c,toLabel(Contractmanagement__r.ObjectName__r.ProjectDeliveryMarket__c),Group__r.Name,Contractmodel__c,Projectname__c,
+                                    Contractwarrantyperiod__c,Configurationcategory__c,Deliveryrequirements__c,
+                                    toLabel(Contractmanagement__r.ObjectName__r.ProjectArea__c),toLabel(Contractmanagement__r.ObjectName__r.ProjectProductType__c),
+                                    Contractmanagement__r.ObjectName__r.MarketBidDept__c,Contractmanagement__r.ObjectName__c,
+                                    FinishDate__c 
+                                    FROM Requirementsreview__c WHERE id =: recordId];
+        
+        String recTypeId_basic =Schema.SObjectType.BasicData__c.getRecordTypeInfosByDeveloperName().get('RecordType_BasicData_Customer').getRecordTypeId();
+        List<BasicData__c> basicCustList = [SELECT Id,
+                                                    MainChargeEmp__r.Job_Number__c
+                                                    FROM BasicData__c 
+                                                    WHERE RecordTypeId =:recTypeId_basic 
+                                                    AND MarketBidDept__c =:req.Contractmanagement__r.ObjectName__r.MarketBidDept__c];
+        if(basicCustList.size()==0){
+            return 'BasicDataIsNull';
+        }
+
+        //获取客户分部
+        Opportunity oppInfo = null;
+        if(req.Contractmanagement__r.ObjectName__c != null){
+            oppInfo = [select id, toLabel(MarketBidDept__c) from Opportunity where id =: req.Contractmanagement__r.ObjectName__c];
+        }
+
         List<String> original = new List<String>(); //原合同品牌
         List<String> recom = new List<String>(); //推荐品牌
         List<String> config = new List<String>(); //配置名称
@@ -54,19 +77,22 @@ global without sharing class ControllerProprietorRequireReview {
             reqBody.fd_applyer = req.Applicant_Num__c; //申请人
             reqBody.fd_brand_asume = original;                  //原合同品牌
             reqBody.fd_brand_suggest = recom;                   //推荐品牌
-            reqBody.fd_country_in = String.isBlank(req.Country__c)?'':req.Country__c;             //国别
+            reqBody.fd_country_in = String.isBlank(req.Contractmanagement__r.ObjectName__r.ProjectDeliveryMarket__c)?'':req.Contractmanagement__r.ObjectName__r.ProjectDeliveryMarket__c;             //国别
             reqBody.fd_hetong_type = String.isBlank(req.Contractmodel__c)?'':req.Contractmodel__c;      //合同机型
             reqBody.fd_project_name = req.Projectname__c;       //项目名称
             reqBody.fd_quality_save = req.Contractwarrantyperiod__c;       //合同质保期
             reqBody.fd_range_setting = req.Configurationcategory__c;       //范畴选取
             reqBody.fd_setting_name = config;       //配置名称
             reqBody.fd_submit_request = req.Deliveryrequirements__c;       //交付要求
-            reqBody.fd_war_zone = req.Opportunityname__r.ProjectArea__c;       //项目所属区域    
+            reqBody.fd_war_zone = req.Contractmanagement__r.ObjectName__r.ProjectArea__c;       //项目所属区域    
             reqBody.n30 = req.Regional_Agency__r.Job_Number__c; //区域代办处    
             reqBody.n40 = req.Presidential_System_Room__r.Job_Number__c;       //总统系统室
-            reqBody.fd_project_type = req.ProjectType__c;       //项目类型
-            reqBody.fd_customer_segment = req.Opportunityname__r.MarketBidDept__c;       //客户分部
+            reqBody.fd_project_type = req.Contractmanagement__r.ObjectName__r.ProjectProductType__c;       //项目类型
+            if (oppInfo!=null) {
+                reqBody.fd_customer_segment = oppInfo.MarketBidDept__c==null?'':oppInfo.MarketBidDept__c;       //客户分部
+            }
             reqBody.fd_finish_date = req.FinishDate__c;         //决策完成时间
+            reqBody.fd_customer_leader = basicCustList[0].MainChargeEmp__r.Job_Number__c==null?'':basicCustList[0].MainChargeEmp__r.Job_Number__c; //客户分部负责人
 
             
             String response = Utils.callOut(JSON.serialize(reqBody),ext.Request_URL__c,'ControllerProprietorRequireReview',ext.Request_Source__c,ext.Request_Method__c,ext.Request_Key__c,ext.Initialization_Vector__c);
@@ -169,6 +195,7 @@ global without sharing class ControllerProprietorRequireReview {
         public String fd_project_type{get;set;}//项目类型
         public String fd_customer_segment{get;set;}//客户分部
         public Date fd_finish_date{get;set;}//决策完成时间
+        public String fd_customer_leader{get;set;}//客户分部负责人
     }
 
     public class ResponseBody {
