--- a/force-app/main/default/classes/Test_ContractStatusHandler.cls
+++ b/force-app/main/default/classes/Test_ContractStatusHandler.cls
@@ -2,7 +2,7 @@
 public with sharing class Test_ContractStatusHandler {
     static testMethod void testContractStatus(){
 
-        Profile p = [SELECT Id FROM Profile WHERE Name='项目经理'];
+        Profile p = [SELECT Id FROM Profile WHERE Name like '%项目经理%' limit 1];
 
        // UserRole role = [SELECT ID,NAME FROM UserRole WHERE NAME = '陆上PMO'];
 
@@ -10,14 +10,19 @@ public with sharing class Test_ContractStatusHandler {
         insert user; 
 
         Account acc = new Account();
-        acc.name = 'acc';
-        acc.BeenGroup__c = true ; 
-        insert acc ; 
+        acc.Name = '广州风机';
+        acc.BeenGroup__c = true;
+        acc.TopGroup__c = 'TG101';
+        acc.Accounttype__c = '已交易客户';
+        insert acc;
 
         Account acc1 = new Account();
-        acc1.name = 'acc1';
-        acc1.BeenGroup__c = true ; 
-        insert acc1 ; 
+        acc1.Name = '广州风机子级客户';
+        acc1.BeenGroup__c = false;
+        acc1.TopGroup__c = 'TG101';
+        acc1.ParentId = acc.Id;
+        acc1.Accounttype__c = '已交易客户';
+        insert acc1;
 
         //User user = [SELECT ID,NAME,Email  FROM USER WHERE name = 'celnet'];
 
@@ -26,24 +31,19 @@ public with sharing class Test_ContractStatusHandler {
         opp.StageName = '线索管理';
         opp.CloseDate = Datetime.now().date();
         opp.ContractSignedCompany__c = acc.id;
-        // opp.name = 'opp';
-        // opp.Completiontime__c = Datetime.now().date();
-        // opp.Contractstage__c = '初版评审';
-        // opp.Startdate__c = Datetime.now().date();
-        // opp.Contractsigning__c = Datetime.now().date();
-        // opp.ContractDate__c = Datetime.now().date();
-        // opp.StageName ='线索管理';
-
-        // opp.CloseDate = Datetime.now().date();
+        opp.OpportunityApprovalStatus__c = '线索转化通过';
         insert opp;
 
         recordType imtRecordType = [SELECT Id,DeveloperName ,Sobjecttype FROM recordType WHERE sobjecttype = 'Integrated_Middle_Table__c' AND DeveloperName = 'ProjectType_RecordType'];
 
         Integrated_Middle_Table__c i = new Integrated_Middle_Table__c();
 		i.RecordTypeId = imtRecordType.id;
-        i.ProjectType__c = '陆上';
+        i.ProjectType__c = '陆上项目';
         i.RoleName__c = '陆上PMO';
         insert i  ;
+
+        opp.StageName = '招投标';
+        update opp;
 
         Contractmanagement__c contract = new Contractmanagement__c();
 
@@ -59,7 +59,8 @@ public with sharing class Test_ContractStatusHandler {
         project.Opportunity__c = opp.id;
         //project.OwnerId = user.id;
         project.ProjectManager__c = user.id;
-        project.Type__c = '陆上';
+        project.ProjectProductType__c = '01';
+        project.Contract__c = contract.Id;
         insert project;
 
         ProjectStage__c stage1 = new ProjectStage__c(Name='合同商务',Project__c=project.id, Number__c='1');
